[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Textures/IntroBackground.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/GUI/Stage.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Scenes/CampaingScene.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/GUI/CloseIcon.png" type="Texture" id=4]

[node name="CampaingScene" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 858, 459, 769, 323, 557, 172, 378, 342, 206, 374, 141, 233 )
default_color = Color( 0.933333, 0.866667, 0.72549, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="StateButtons" type="Node" parent="."]

[node name="State1Button" type="TextureButton" parent="StateButtons"]
margin_left = 115.0
margin_top = 209.0
margin_right = 169.0
margin_bottom = 257.0
texture_normal = ExtResource( 2 )

[node name="State2Button" type="TextureButton" parent="StateButtons"]
self_modulate = Color( 1, 1, 1, 0.623529 )
margin_left = 180.0
margin_top = 346.0
margin_right = 234.0
margin_bottom = 394.0
texture_normal = ExtResource( 2 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
margin_bottom = 60.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 1274.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="ExitButton" type="TextureButton" parent="HUD/MarginContainer/HBoxContainer"]
margin_left = 1214.0
margin_right = 1268.0
margin_bottom = 48.0
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource( 4 )

[connection signal="pressed" from="HUD/MarginContainer/HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
